# gentooinstall

./: .pre-commit-config.yaml  TODO.md  pyproject.toml
gentooinstall/: __init__.py  __main__.py  script.py
gentooinstall/lib/: disks.py  exceptions.py  fdisk.py  general.py  hardware.py  installer.py  storage.py  system.py
gentooinstall/lib/gui/: components.py  console.py  display.py  prompt.py
tests/: test_gentooinstall.py  test_installer.py  test_script.py
