[tool.poetry]
name = "gentooinstall"
version = "0.1.0"
description = "Textual User Interface to assist users in installing gentoo."
license = "AGPL-3.0-only"
authors = ["Parinz <parinzee@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^10.13.0"
requests = "^2.26.0"
pexpect = "^4.8.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pre-commit = "^2.15.0"
isort = "^5.10.1"
pylint = "^2.11.1"
mypy = "^0.910"
types-requests = "^2.26.0"
types-attrs = "^19.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
